--- a/week 1/basic.html
+++ b/week 1/basic.html
@@ -4,6 +4,43 @@
 </head>
 <body>
     <h1>Sania Khalid</h1>
-    <p>Iam <b>>Sania Khalid</b>, I recently passed my intermediate in Pre-Computer Science,<br> 
+    <p>Iam <b>Sania Khalid</b>, I recently passed my intermediate in <i>Pre-Computer Science,</i><br> 
         and now i join pitp for <u>web development</u> </p>
+        <table>
+        <button>C</button><button>%</button><button>clear</button><button>/</button><br>
+        <button>7</button><button>8</button><button>9</button><button>*</button><br>
+        <button>4</button><button>5</button><button>6</button><button>-</button><br>
+        <button>1</button><button>2</button><button>3</button><button>+</button><br>
+        <button>0</button><button>.</button><button>^</button><button>=</button><br> 
+     </table>
+     <table border="1">
+            <thead>
+                <tr>
+                    <th>C</th>
+                    <th>%</th>
+                    <th>clr</th>
+                    <th>/</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>9</td>
+                    <td>*</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>+</td>
+                </tr>
+                 </tbody>
+          
 </body>
