--- a/week 1/portfolio/index.html
+++ b/week 1/portfolio/index.html
@@ -16,9 +16,20 @@
     </header>
     <hr>
     <main>
-        <img src="photo.jpg" height="200px" width="200px" />
+    <section>
+        <h2>About Me</h2> 
+        <img src="photo.jpg" height="100px" width="100px" border="2 "/>
         <h1>Sania Khalid</h1>
-        <p>I'm Sania Khalid, I'm from Jamshoro Colony. I have completed my matriculation and Intermediate from Govt.Girls Higher Secondary School Jamshoro Colony,and now I'm learning about web development.</p>
+        <p>An Aspiring Web Developer</p>
+        <p>I'm Sania Khalid,from Jamshoro Colony. I have completed my matriculation and Intermediate from Govt.Girls Higher Secondary School Jamshoro Colony,and now I'm learning about web development.</p>
+        <p>Iam a dedicated student currently enrollled in the People Information Technology Program(PITP), specializing in Web Development.This portfolio serves as a showcase of myy progrss,demonstrating the skills and projects I have undertaken throughout the course.My goal is to build robust,responsive,and user-friendly web applications,and Iam excited to share my learning journey with you. Iam constanly seeking new challenges and opportunities to apply my developing experties in HTML, CSS and JavaScript. </p>
+        <p>My intial focus has been on mastering the fundamentals of HTML structure and Semantics,ensuring every project is built on a solid foundation of accessibility and the best practices. Future modules will expand into modern CSS layouts, Framework mastery,and advanced JavaScript concepts. </p>
+        <p>Sroll down to see the table below! The fixed header should stay visible at the top while you scroll through the rest of the page content.</p>
+        <br>
+    </section>
+    <hr>
+    <section>
+        <h2>My skills (Week 1 Focusing on HTML)</h2>
         <table border="10">
             <thead>
                 <tr>
@@ -29,7 +40,7 @@
             <tbody>
                 <tr>
                     <td>Basics Of Html</td>
-                     <td>Completed</td>
+                    <td>Completed</td>
                 </tr>
                 <tr>
                     <td>Semantic Of Html</td>
@@ -44,14 +55,16 @@
                      <td>In progress</td>
                 </tr>
             </tbody>
-
         </table>
+        </section>
     </main>
     <hr>
     <footer>
-        <p>All Right are Reserved | 2025 </p>
-        <p>Made by Sania Khalid</p>
+        <p>
+            Email:
+            <a href="saniakhalid13@gmail.com">saniakhalid13@gmail.com</a>
+        </p>
+        <p> Copyright 2025 | All Rights are Reserved | Sania khalid</p>
     </footer>
-    
 </body>
 </html>
