--- a/week 1/portfolio/index.html
+++ b/week 1/portfolio/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio </title>
 </head>
+<style>
+    p1 {
+        color:brown;
+        text-align:left;
+        background-color: lightgreen;
+     
+        }
+        h1{
+        color:brown;
+        text-align:left;
+        background-color: lightgreen; 
+        
+        }
+</style>
+
 <body>
     <header>
-        <h1>Personal Portfolio</h1>
+        <p1>PERSONAL PORTFOLIO</p1>
         <nav>
             <a href="./">Home</a>
             <a href="./projects.html">Projects</a>
