--- a/week 2/positions.html
+++ b/week 2/positions.html
@@ -21,6 +21,6 @@
     </div>
     <div class="fixed-box">Fixed Footer Message</div>
     <p>Scroll down to see the fixed element stay put.... </p>
-    <p style="heght:1000px">Keep scrolling</p>
+    <p style="height:1000px">Keep scrolling</p>
 </body>
 </html>
