--- a/week 1/portfolio/projects.html
+++ b/week 1/portfolio/projects.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Projects</h1>
+    <header>
+        <h1>Sania Khalid's Portfolio</h1>
+        <nav>
+            <a href="./">Home</a>
+            <a href="./projects.html">Projects</a>
+            <a href="./contact.html">COntact</a>
+        </nav>
+        <hr>
+    </header>
+    <main>
+         <h1> My Projects</h1>
+         <p>Projects Index</p>
+         <ul>
+            <li><a href="#project-1">HTML Foundations</a></li>
+            <li><a href="#project-2">CSS Styling</a></li>
+            <li><a href="#project-3">JavaScript Implemantation</a></li>
+         </ul>
+         <hr>
+         <section id="project-1">
+            <h2>1. HTML Foundations</h2>
+            <p><strong>Description:</strong> A small HTML5 based portfolio that uses semantic tags and multiple pages with form and multimedia.</p>
+            <p><strong>Technologies Used:</strong></p>
+            <P><strong>Status:</strong>In progress</P>
+         </section>
+         <section id="project-2">
+            <h2>2. CSS Styling</h2>
+            <p><strong>Description:</strong> An HTML5 and CSS3 based small portfolio</p>
+
+         </section>
+    </main>
+   
 </body>
 </html>
