--- a/week 2/portfolio/index.html
+++ b/week 2/portfolio/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="photo.jpg">
+
 </head>
 <body>
     <header>
-        <p1>PERSONAL PORTFOLIO</p1>
+        <p>PERSONAL PORTFOLIO</p>
         <nav>
             <a href="./">Home</a>
             <a href="./projects.html">Projects</a>
@@ -19,6 +22,7 @@
     <section>
         <h2>About Me</h2> 
         <img src="photo.jpg" height="100px" width="100px" border="2 "/>
+      
         <h1>Sania Khalid</h1>
         <p>An Aspiring Web Developer</p>
         <p>I'm Sania Khalid,from Jamshoro Colony. I have completed my matriculation and Intermediate from Govt.Girls Higher Secondary School Jamshoro Colony,and now I'm learning about web development.</p>
