--- a/week 2/restautrant-website/index.html
+++ b/week 2/restautrant-website/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="top-bar">
             <span>Delivery Timing: 7:00 AM to 1:00 AM</span>
-            <a href="tel:+923403108477" class="call-btn">📞 Call Order: +92 340 3108477</a>
+            <a href="tel:+923403108477" class="call-btn">📞  Call Order: +92 340 3108477</a>
         </div>
         <nav>
             <div class="logo">Bismillah Restaurant</div>
@@ -36,12 +36,11 @@
             <div class="menu-category">
                 <h3>Chicken Rolls</h3>
                 <ul>
-                    <li class="menu-item"><span class="item-name">Chicken Chatni Roll</span><span class="item-price">Rs. 190</span></li>
-                    <li class="menu-item"><span class="item-name">Chicken Mayo Roll</span><span class="item-price">Rs. 220</span></li>
-                    <li class="menu-item"><span class="item-name">Chicken Garlic Mayo</span><span class="item-price">Rs. 250</span></li>
-                    <li class="menu-item"><span class="item-name">Chicken Cheese Roll</span><span class="item-price">Rs. 250</span></li>
-                    <li class="menu-item"><span class="item-name">Chicken Malai Boti Roll</span><span class="item-price">Rs. 250</span></li>
-                    <li class="menu-item"><span class="item-name">Chicken Reshmi Kabab</span><span class="item-price">Rs. 230</span></li>
+<li class="menu-item"><span class="item-name">Chicken Chatni Roll</span><span class="item-price">Rs. 190</span></li>
+<li class="menu-item"><span class="item-name">Chicken Mayo Roll</span><span class="item-price">Rs. 220</span></li>
+<li class="menu-item"><span class="item-name">Chicken Garlic Mayo</span><span class="item-price">Rs. 250</span></li>
+<li class="menu-item"><span class="item-name">Chicken Cheese Roll</span><span class="item-price">Rs. 250</span></li>
+<li class="menu-item"><span class="item-name">Chicken Malai Boti Roll</span><span class="item-price">Rs. 250</span></li> <li class="menu-item"><span class="item-name">Chicken Reshmi Kabab</span><span class="item-price">Rs. 230</span></li>
                 </ul>
             </div>
 
