--- a/week 2/portfolio/contact.html
+++ b/week 2/portfolio/contact.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Umar Farooq Web Developer</title>
+    <title>Personal portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Sania Khalid's Portfolio</h1>
+    <header class="id1">
+          <p class="para1">PERSONAL PORTFOLIO</p>
         <nav>
-            <a href="./">Home</a>
-            <a href="./projects.html">Projects</a>
-            <a href="./contact.html">Contact</a>
+            <a class="nav1" href="./">Home</a>
+            <a class="nav1" href="./projects.html">Projects</a>
+            <a class="nav1" href="./contact.html">Contact</a>
         </nav>
-        <hr>
     </header>
+    <hr>
     <main>
-        <h2>Contact</h2>
+        <h2 class="contact">Contact 📞</h2>
         <p>Please use the form below to contact me</p>
         <form action="./thank-you.html" method="get">
             <fieldset>
@@ -39,11 +39,11 @@
                 <label for="message">Your Message</label>
                 <textarea id="message" rows="5" cols="30"></textarea>
             </fieldset>
-            <button>Send Message</button>
+            <button class="btn1">Send Message</button>
         </form>
     </main>
     <footer>
-        <p>Email: <a href="saniakhalid@gmail.com"></a>saniakhalid@gmail.com</p>
+        <p>Email: <a href="saniakhalid13@gmail.com"></a>saniakhalid13@gmail.com</p>
         <p>Copyright 2025 | All Rights Reserved |Sania Khalid  </p>
     </footer>
 </body>
