--- a/week 2/portfolio/index.html
+++ b/week 2/portfolio/index.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <header>
-        <p>PERSONAL PORTFOLIO</p>
+    <header class="id1">
+        <h1 class="para1">PERSONAL PORTFOLIO</h1>
         <nav>
             <a href="./">Home</a>
             <a href="./projects.html">Projects</a>
@@ -20,10 +20,10 @@
     <hr>
     <main>
     <section>
-        <h2>About Me</h2> 
+        <h3 class="about">About Me</h3> 
         <img src="photo.jpg" height="100px" width="100px" border="2 "/>
       
-        <h1>Sania Khalid</h1>
+        <h2 class="name">Sania Khalid</h2>
         <p>An Aspiring Web Developer</p>
         <p>I'm Sania Khalid,from Jamshoro Colony. I have completed my matriculation and Intermediate from Govt.Girls Higher Secondary School Jamshoro Colony,and now I'm learning about web development.</p>
         <p>Iam a dedicated student currently enrollled in the People Information Technology Program(PITP), specializing in Web Development.This portfolio serves as a showcase of myy progrss,demonstrating the skills and projects I have undertaken throughout the course.My goal is to build robust,responsive,and user-friendly web applications,and Iam excited to share my learning journey with you. Iam constanly seeking new challenges and opportunities to apply my developing experties in HTML, CSS and JavaScript. </p>
@@ -61,6 +61,36 @@
             </tbody>
         </table>
         </section>
+        <section>
+        <h2>My skills (Week 2 Focusing on CSS)</h2>
+        <table border="10">
+            <thead>
+                <tr>
+                    <th>Skills</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                 <tr>
+                    <td>Personal Portfolio Project</td>
+                     <td>Completed</td>
+                </tr>
+                <tr>
+                    <td>Flex Layout</td>
+                    <td>Completed</td>
+                </tr>
+                <tr>
+                    <td>Grid Layout</td>
+                     <td>Completed</td>
+                </tr>
+                <tr>
+                    <td>Project:Website of Bismillah Restaurant</td>
+                     <td>Completed</td>
+                </tr>
+            </tbody>
+        </table>
+        </section>
+        
     </main>
     <hr>
     <footer>
