--- a/week 2/portfolio/projects.html
+++ b/week 2/portfolio/projects.html
@@ -3,49 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POrtfolio</title>
+    <title>personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Sania khalid's Portfolio</h1>
+    <header class="id1">
+     <p class="para1">PERSONAL PORTFOLIO</p>
         <nav>
-            <a href="./">Home</a>
-            <a href="./projects.html">Projects</a>
-            <a href="./contact.html">Contact</a>
+            <a class="nav1" href="./">Home</a>
+            <a class="nav1"href="./projects.html">Projects</a>
+            <a class="nav1" href="./contact.html">Contact</a>
         </nav>
-        <hr>
     </header>
+    <hr>
     <main>
-        <h1>My Projects</h1>
-        <p>Projects Index</p>
+        
+        <h1 class="project">My Projects 💡</h1>
+        <p class="index">⇒ Projects Index</p>
         <ul>
             <li><a href="#project-1">HTML Foundations</a></li>
             <li><a href="#project-2">CSS Styling</a></li>
-            <li><a href="#project-3">JavaScript Implementation</a></li>
+           
         </ul>
         <hr>
         <section id="project-1">
             <h2>1. HTML Foundations</h2>
             <p><strong>Description:</strong> A small HTML5 based portfolio that uses semantic tags and multiple pages with form and multimedia.</p>
             <p><strong>Technologies Used:</strong> HTML & HTML5</p>
-            <p><strong>Status:</strong> In progress</p>
+            <p><strong>Status:</strong> Completed</p>
         </section>
         <hr>
         <section id="project-2">
             <h2>2. CSS Styling</h2>
             <p><strong>Description:</strong> An HTML5 and CSS3 based small portfolio with styling and responsivenss for various screens.</p>
             <p><strong>Technologies Used:</strong> CSS & CSS3</p>
-            <p><strong>Status:</strong> Not yet started</p>
+            <p><strong>Status:</strong> Completed</p>
         </section>
         <hr>
-        <section id="project-3">
-            <h2>3. JavaScript Implementation</h2>
-            <p>Javascript is about implementing functionality of the different components in our web page. We can use it to perform various tasks dynamically and change the features of our website.</p>
-        </section>
     </main>
     <footer>
-        <p>Email: <a href="saniakhalid@gmail.com">saniakhalid@gmail.com</a></p>
+        <p>Email: <a href="saniakhalid13@gmail.com">saniakhalid13@gmail.com</a></p>
         <p>Copyright 2025 | All Rights Reserved |Sania Khalid </p>
     </footer>
 </body>
