--- a/week 2/portfolio/index.html
+++ b/week 2/portfolio/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio </title>
+    <title>Sania Khalid's Portfolio </title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="photo.jpg">
 
@@ -56,7 +56,7 @@
                 </tr>
                 <tr>
                     <td>Personal Portfolio Project</td>
-                     <td>In progress</td>
+                     <td>Completed</td>
                 </tr>
             </tbody>
         </table>
